<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_nms1_bringup</name>
    <version>0.0.0</version>
    <description>ROS2 package with control launch and config files for nano model simplification, mark 1.</description>
    <maintainer email="jet22854111@gmail.com">Quantumspawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- general dependencies-->
    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>tf2_msgs</depend>

    <!-- execute dependencies -->
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>nturt_nms1_description</exec_depend>
    <exec_depend>nturt_nms1_sim</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>ros2_controllers</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
