<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_nms1_description</name>
    <version>0.0.0</version>
    <description>Package for robot description of nano model simplification, mark 1.</description>
    <maintainer email="jet22854111@gmail.com">Quantumspawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
