<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_nms1_hardware</name>
    <version>0.0.0</version>
    <description>ROS2 package with hardware components for nano model simplification, mark 1.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- general dependencies-->
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
