<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_nms1_nav</name>
    <version>0.0.0</version>
    <description>ROS2 package with navigation launch and config files for nano model simplification, mark 1.</description>
    <maintainer email="jet22854111@gmail.com">Quantumspawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>navigation2</exec_depend>
    <exec_depend>nturt_nms1_bringup</exec_depend>
    <exec_depend>nturt_nms1_description</exec_depend>
    <exec_depend>nturt_nms1_sim</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
