<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_nms1_sim</name>
    <version>0.0.0</version>
    <description>ROS2 package with simulating environment based on f1tenth gym for nano model simplification, mark 1.</description>
    <maintainer email="jet22854111@gmail.com">Quantumspawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- execute dependencies -->
    <exec_depend>ackermann_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>nav2_common</exec_depend>
    <exec_depend>nav2_lifecycle_manager</exec_depend>
    <exec_depend>nav2_map_server</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>nturt_nms1_description</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <!-- python dependencies -->
    <exec_depend>python-transforms3d-pip</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
